--- a/lib/canonical/launchpad/templates/marketing-translations-tour.xml
+++ b/lib/canonical/launchpad/templates/marketing-translations-tour.xml
@@ -21,27 +21,29 @@
       both within your own community and with other communities.
     </summary>
     <screenshot>/+icing/translations-tour-screenshot2.png</screenshot>
-    <callout top="" left="">Maintaining the quality of your translations is
-      vital. Balancing quality with low barriers to entry can be difficult.
-      Launchpad offers you three translation policies, from fully open to
-      restricted.
-    </callout>
-    <callout top="" left="">If you choose a fully open policy, anyone can make
-      a translation and anyone can review a translation. Alternatively, you
-      can appoint individuals or teams as trusted translators for each
-      language.
-    </callout>
-    <callout top="" left="">Common phrases reoccur in the interfaces of many
-      applications. When you're translating a string, Launchpad finds other
-      places where it has already been translated and tells you how it appears
-      there. You're free to accept Launchpad's suggestion or to enter your own
-      translation.
-    </callout>
-    <callout top="" left="">When you begin work on a new release of your
-      software, translators should be free to continue work on previous
-      releases. With Launchpad, you can maintain separate translation efforts
-      for each release.
-    </callout>
+    <transition>
+      <p>Maintaining the quality of your translations is
+        vital. Balancing quality with low barriers to entry can be difficult.
+        Launchpad offers you three translation policies, from fully open to
+        restricted.
+      </p>
+      <p>If you choose a fully open policy, anyone can make
+        a translation and anyone can review a translation. Alternatively, you
+        can appoint individuals or teams as trusted translators for each
+        language.
+      </p>
+      <p>Common phrases reoccur in the interfaces of many
+        applications. When you're translating a string, Launchpad finds other
+        places where it has already been translated and tells you how it
+        appears there. You're free to accept Launchpad's suggestion or to
+        enter your own translation.
+      </p>
+      <p >When you begin work on a new release of your
+        software, translators should be free to continue work on previous
+        releases. With Launchpad, you can maintain separate translation
+        efforts for each release.
+      </p>
+    </transition>
   </screen>
 
 </tour>
