Add more details about the requests with identical addresses (seen when looking at a request with a DUPLICATEDADDRESS status) and a test for this feature.

--- a/lib/canonical/launchpad/icing/shipit.css
+++ b/lib/canonical/launchpad/icing/shipit.css
@@ -11,7 +11,7 @@ body {margin: 0; padding: 0;}
 
 div.body {padding: 0em 1em;}
 
-.discreet, .lesser {font-size: smaller;}
+.discreet, .lesser {font-size: small;}
 
 /* --- Error, warning, and info messages --- */
 
