--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -280,7 +280,6 @@ hr {
 }
 /* Next is a location bar. */
 #locationbar {
-  float: left;
   width: 100%;
   height: 26px;
   margin: 0;
@@ -562,8 +561,9 @@ So it's hidden initially, and then revealed if JavaScript is available.
 #help {visibility: hidden;}
 
 /* The rest of the page keeps clear of the collapsed help panel. */
-#nonhelp {margin: 0 20px 0 38px;}
-
+/* test: http://launchpad.dev/+logout */
+#nonhelp {margin: 10px 20px 0 38px;}
+ 
 /*- App home pages and pillar indexes both have a heading and app buttons, -*/
 table#applications {margin-bottom: -0.5em;}
 table#applications th, table#applications td {vertical-align: baseline;}
@@ -573,7 +573,7 @@ table#applications td {text-align: right;}
 body.pillarindex table#applications th {padding-left: 0;}
 
 /* Other page types have a global search field. */
-#globalsearch {float: right; margin-top: 15px; width: 220px;}
+#globalsearch {float: right; margin-top: 5px; width: 220px;}
 #globalsearch #q {border: 1px solid #a7c2ce; width: 170px;}
 #globalsearch #searchbutton {
   position: relative;
@@ -823,7 +823,6 @@ ul#applicationchooser li#applicationchooser_selected {
   background: none;
   color: black;
   float: left;
-  margin: 10px 0 0;
   width: 70%;
 }
 #structuralobjectheading img {
