--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -64,8 +64,8 @@ thead th, tr.thead th {text-align: center;}
 
 html {
   position: relative;
-  font-family: "Trebuchet MS", "DejaVu Sans Condensed", "Tahoma", sans-serif;
-  font-size: 8.5pt;
+  font-family: sans-serif;
+  font-size: 10pt;
   color: #505050;
   background-color: #FFFFFF;
 }
@@ -77,16 +77,16 @@ body {margin: 0; padding: 0;}
 :visited                      {color: #324c7f; text-decoration: none;}
 
 h1, h2, h3, h4, h5, h6 {background: none; color: #83ad23; font-weight: normal;}
-h1 {font-size: 2.8em;    margin: 0;              padding: 0px 0px 10px 0px;}
-h2 {font-size: 1.55em; margin: 1em 0 0.75em;   padding: 0;} /* FP; /products */
-h3 {font-size: 1.15em; margin: 1em 0 0.5em 0;  padding: 0;} /* +topcontributors */
+h1 {font-size: 2.5em;  margin: 0;              padding: 0px 0px 10px 0px;}
+h2 {font-size: 1.5em;  margin: 1em 0 0.75em;   padding: 0;} /* FP; /products */
+h3 {font-size: 1.1em;  margin: 1em 0 0.5em 0;  padding: 0;} /* +topcontributors */
 h4 {font-size: 1em;    margin: 0;              padding: 0px 0px 10px 0px;}
 h5 {font-size: 1em;    margin: 0;              padding: 0;}
 h6 {font-size: 1em;    margin: 0;              padding: 0;}
 h1:first-child, h2:first-child, h3:first-child, h4:first-child {margin-top: 0;}
 
 .exception {color: #cc0000;}
-.discreet, .lesser {font-size: smaller;}
+.discreet, .lesser {font-size: 80%;}
 .unavailable {color: #999; background: none;}
 .oopsid {color: #cc0000; font-weight: bold;}
 
@@ -140,7 +140,7 @@ form {border: 0; margin: 0; padding: 0;}
 input, select, textarea {
   background-color: #fff;
   color: #656565;
-  font-family: "Trebuchet MS", "DejaVu Sans Condensed", "Tahoma", sans-serif;
+  font-family: sans-serif;
   margin: 0;
 }
 input[type="text"], input[type="submit"], input[type="reset"], textarea {
@@ -701,7 +701,6 @@ ul#applicationchooser li#applicationchooser_selected {
   margin: 0px 16px 0px 16px;
   padding: 0;
   list-style: none;
-  font-size: 11px;
 }
 #portlets .portlet {
   clear: both;
@@ -750,7 +749,7 @@ ul#applicationchooser li#applicationchooser_selected {
 #portlets .portlet,
 #portlets .portlet h2,
 #portlets .portlet li {
-  font-size: 11px !important;
+  font-size: 12px !important;
 }
 #portlets .portlet h2 {
   margin-top: 0 !important;
@@ -832,7 +831,7 @@ ul#applicationchooser li#applicationchooser_selected {
 #structuralobjectheading .main {
   font-weight: bold;
   margin: 1px 0 0 70px;
-  font-size: 2.3em;
+  font-size: 2em;
 }
 #structuralobjectheading .intro {
   margin: 2px 0 0 70px;
@@ -1382,12 +1381,11 @@ div#applications {padding: 1em 0; text-align: center;}
 }
 .central {
   clear: left; /* Bugs FP */
-  font-size: 1.5em;
+  font-size: 1.25em;
   margin: 0 auto 1em;
   padding: 0.5em 0; /* FP should fit in ~750px; Bugs FP */
   width: auto;
 }
-.tab-unknown .central {font-size: 1.75em;}
 .central input {
   font-size: 1em;
 }
@@ -1396,7 +1394,7 @@ div#applications {padding: 1em 0; text-align: center;}
   font-size: 1.2em;
 }
 #application-summary, #application-footer {
-  font-size: 1.4em;
+  font-size: 1.2em;
   line-height: 1.4em;
   margin-top: 0;
 }
@@ -1521,6 +1519,8 @@ tr.highlight {background-color: #ff9;}
 table.listing tr.note {font-size: smaller;}
 tr.amount, td.amount {text-align: right;}
 table.listing th, table.listing td {padding: 0.25em;}
+/* We don't want extra padding on nested tables, such as batch navigation. */
+table.listing table th, table.listing table td {padding: 0;}
 table.listing th {font-size: 1.125em; white-space: nowrap;}
 table.listing td {border: 1px #d2d2d2; border-style: dotted none none none;}
 table.listing tr.note td {border-style: none;}
