--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -77,7 +77,7 @@ body {margin: 0; padding: 0;}
 :visited                      {color: #324c7f; text-decoration: none;}
 
 h1, h2, h3, h4, h5, h6 {background: none; color: #83ad23; font-weight: normal;}
-h1 {font-size: 2.5em;  margin: 0;              padding: 0px 0px 10px 0px;}
+h1 {font-size: 2.2em;  margin: 0;              padding: 0px 0px 10px 0px;}
 h2 {font-size: 1.5em;  margin: 1em 0 0.75em;   padding: 0;} /* FP; /products */
 h3 {font-size: 1.1em;  margin: 1em 0 0.5em 0;  padding: 0;} /* +topcontributors */
 h4 {font-size: 1em;    margin: 0;              padding: 0px 0px 10px 0px;}
@@ -831,11 +831,11 @@ ul#applicationchooser li#applicationchooser_selected {
 #structuralobjectheading .main {
   font-weight: bold;
   margin: 1px 0 0 70px;
-  font-size: 2em;
+  font-size: 24px;
 }
 #structuralobjectheading .intro {
   margin: 2px 0 0 70px;
-  font-size: 1em;
+  font-size: 12px;
 }
 #structural-children {
   clear: both;
