--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -2083,6 +2083,11 @@ li {
 }
 */
 
+#project-cloud-preview a {
+  padding-left: 0.5em;
+  padding-right: 0.5em,
+}
+
 /* Clouds of links. */
 .cloud-size-smallest {
   font-size: 0.8em;
