--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -2088,6 +2088,11 @@ li {
   padding-right: 0.5em,
 }
 
+#project-tags a {
+  padding-left: 0.5em;
+  padding-right: 0.5em,
+}
+
 /* Clouds of links. */
 .cloud-size-smallest {
   font-size: 0.8em;
