--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -2176,6 +2176,14 @@ div.popupTitle {
   border-top: 1px solid #d2d2d2;
 }
 
+#search-results .search-result-link {
+  font-weight: bold;
+}
+
+#search-results div.summary p {
+  margin-top: 0;
+}
+
 #no-results {
   margin-top: 2em;
 }
