--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -941,7 +941,7 @@ it out of the page flow. */
 }
 
 #help-body {
-    background: url(spinner.gif) no-repeat center center;
+    background: url(/@@/spinner) no-repeat center center;
 }
 #help-pane iframe {width: 100%; height: 300px; border: 0;}
 #help-pane iframe.invisible {
@@ -1501,14 +1501,6 @@ a.bg-image {
 
 a.info {
     background: url('/@@/info') no-repeat scroll left center;
-    padding-left: 18px;
-}
-a.edit {
-    background: url('/@@/edit') no-repeat scroll left center;
-    padding-left: 18px;
-}
-a.add {
-    background: url('/@@/add') no-repeat scroll left center;
     padding-left: 18px;
 }
 
