--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -1821,7 +1821,7 @@ div#sub-unsub-spinner {
   display:none;
   padding:3px 5px 2px 17px;
 }
-.unsub-icon {position:absolute; right:8px;}
+.unsub-icon, .editsub-icon {position:absolute; right:8px;}
 
 
 /* --- Blueprints --- */
