--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -122,7 +122,7 @@ span.invisible {left:-9999em;display:block;}
 .warning, .security {background:url(icon-sprites-2) 0 -704px no-repeat;}
 .private {background:url(icon-sprites-2) 0 -736px no-repeat;}
 .meeting {background:url(icon-sprites-2) 0 -768px no-repeat;}
-.translate {background:url(icon-sprites-2) 0 -800px no-repeat;}
+.translate-icon {background:url(icon-sprites-2) 0 -800px no-repeat;}
 .translation-file {background:url(icon-sprites-2) 0 -832px no-repeat;}
 .translation-template {background:url(icon-sprites-2) 0 -864px no-repeat;}
 .trash {background:url(icon-sprites-2) 0 -896px no-repeat;}
