--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -1511,8 +1511,13 @@ a.info {
 * html .boardComment {float: left; clear: both; width: 99%;} /* IE float bug */
 .boardCommentDetails {
   background-color: #eee;
-  padding: 0.5em 12px;
   border-bottom: 1px solid #ddd
+}
+.boardCommentDetails td {
+    padding: 0.5em 12px;
+}
+.boardCommentDetails td.bug-comment-index {
+    border-right: 1px solid #ddd;
 }
 .boardCommentBody {padding: 0.5em 12px 0;}
 .boardBugActivityBody {
