--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -124,7 +124,7 @@ span.invisible {left:-9999em;display:block;}
 .translate-icon {background:url(icon-sprites-2) 0 -800px no-repeat;}
 .translation-file {background:url(icon-sprites-2) 0 -832px no-repeat;}
 .translation-template {background:url(icon-sprites-2) 0 -864px no-repeat;}
-.trash {background:url(icon-sprites-2) 0 -896px no-repeat;}
+.trash-icon {background:url(icon-sprites-2) 0 -896px no-repeat;}
 .stop {background:url(icon-sprites-2) 0 -928px no-repeat;}
 .bounty {background:url(icon-sprites-2) 0 -960px no-repeat;}
 .list {background:url(icon-sprites-2) 0 -992px no-repeat;}
