--- a/lib/canonical/launchpad/icing/style-3-0.css
+++ b/lib/canonical/launchpad/icing/style-3-0.css
@@ -10,7 +10,7 @@ Remove this section when the old templates and these declarations are gone.
     margin-right: 0;
     }
 .portlet, .aside {
-    clear: auto;
+    clear: none;
     float: none;
     margin: 0;
     }
@@ -93,7 +93,7 @@ body.tab-bugs #mainarea div#portlets div.portlet.active ul li a,
 body.tab-bugs #mainarea div#portlets div.portlet.active ul li a:hover {
     background-color: inherit !important;
     }
-body.tab-bugs #mainarea #portlets .portinherit !important;let.active div {
+body.tab-bugs #mainarea #portlets .portlet.active div {
     border-left: none;
     border-right: none;
     }
@@ -184,13 +184,10 @@ div.columns div.right div.portlet {
     }
 .yui-t4 .yui-b {
     width: 21%;
-    *width: 21%;
     }
 .yui-t4 .yui-main .yui-b {
     width: auto;
-    *width: auto;
     margin-right: 24%;
-    *margin-right: 24%;
     }
 #footer {
     margin-top: 2em;
@@ -260,7 +257,13 @@ pre, code, samp, tt,
 .bug-comment,
 .bug-activity {
   font-size: 116%;
-}
+    }
+ol {
+	margin-left: 1.8em;
+    }
+ol li {
+	list-style: decimal outside;
+	}
 li {
     padding-bottom: .2em;
     }
@@ -274,12 +277,19 @@ thead th, tr.thead th {
     text-align: center;
     vertical-align: bottom;
     }
+form table th, form table td {
+    padding: 2px;
+    }
+form table tbody th {
+    font-weight: bold;
+    }
 em {
     font-style: italic;
     }
 strong {
     font-weight: bold;
     }
+
 /* Common presentations */
 div.see-all {
     font-size: 123.1%; /* Same as a h2 */
@@ -320,6 +330,9 @@ span.see-all {
 .horizontal li {
     display: inline;
     padding: 0 1.5em 0 0;
+    }
+.subordinate {
+    margin-left: 4em;
     }
 .two-column-list li,
 .two-column-list dl {
