--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -1515,9 +1515,14 @@ a.info {
 .boardCommentSummary {margin: 0.3em 0 0.3em 0;}
 .remoteBugComment {background-color: #f6f6f6;}
 * html .boardComment {float: left; clear: both; width: 99%;} /* IE float bug */
+
 .boardCommentDetails {
   background-color: #eee;
-  border-bottom: 1px solid #ddd
+  border-bottom: 1px solid #ddd;
+  padding: 0.5em 12px;
+}
+.boardCommentDetails table {
+  margin: -0.5em -12px;
 }
 .boardCommentDetails td {
     padding: 0.5em 12px;
