Fix fmt:nice_pre for FF3.5 and Konq.

--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -2418,6 +2418,7 @@ div.popupTitle {
 pre.wrap {
   white-space: -moz-pre-wrap;
   white-space: -o-pre-wrap;
+  white-space: pre-wrap;
   word-wrap: break-word;
 }
 
